maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:47: error: ')' expected but 'if' found.
        if (getIndication (x-1,y)< indication && !aMurOuest(x,y)){
        ^JediEscaper:51: error: ';' expected but 'if' found.
        if (getIndication(x,y+1)< indication && !aMurNord(x,y)){
        ^JediEscaper:68: error: expected class or object definition
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
        ^JediEscaper:69: error: expected class or object definition
	def aMurNord(x:Int, y:Int):Boolean = hasTopWall(x,y)
        ^JediEscaper:70: error: expected class or object definition
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
        ^JediEscaper:71: error: Unmatched closing brace '}' ignored here
}
^